Ali Push bind and unbind account ，umeng shared sdk

--- a/app/src/main/res/layout/activity_graphic_dynamic_details.xml
+++ b/app/src/main/res/layout/activity_graphic_dynamic_details.xml
@@ -35,7 +35,9 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/dp15"
                     android:layout_toRightOf="@id/userHeadImg"
-                    android:text="爱吃糖的羊" />
+                    android:text="爱吃糖的羊"
+                    android:textColor="@color/color_666666"
+                    android:textSize="@dimen/sp_14" />
 
 
                 <TextView
@@ -60,7 +62,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dp15"
                 android:layout_marginRight="@dimen/dp15"
-                android:lineSpacingExtra="@dimen/dp4"
+                android:lineSpacingExtra="@dimen/dp6"
                 android:textColor="@color/color_333333"
                 android:textSize="@dimen/sp_16" />
 
@@ -78,11 +80,14 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:layout_margin="@dimen/dp15"
-                android:text="2017-04-24" />
+                android:text="2017-04-24"
+                android:textColor="@color/color_999999"
+                android:textSize="@dimen/sp_12" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp6"
+                android:layout_marginTop="@dimen/dp10"
                 android:background="@color/color_f1f1f1" />
 
 
@@ -105,10 +110,12 @@
                     android:layout_height="@dimen/dp25"
                     android:layout_marginLeft="@dimen/dp20"
                     android:layout_weight="1"
-                    android:background="@color/color_f1f1f1"
+                    android:background="@color/color_f6f6f6"
                     android:gravity="center_vertical"
                     android:paddingLeft="@dimen/dp10"
-                    android:text="评论" />
+                    android:text="评论"
+                    android:textColor="@color/color_666666"
+                    android:textSize="@dimen/sp_14" />
             </LinearLayout>
 
             <com.xkh.hzp.xkh.view.CommentExpandableListView
@@ -161,9 +168,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/dp_4"
                     android:layout_toRightOf="@id/detailsSharedImg"
                     android:text="转发"
+                    android:layout_marginLeft="@dimen/dp6"
+                    android:textColor="@color/color_666666"
                     android:textSize="13sp" />
 
             </RelativeLayout>
@@ -192,9 +200,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/dp_4"
+                    android:layout_marginLeft="@dimen/dp6"
                     android:layout_toRightOf="@id/detailsCommentImg"
                     android:text="0"
+                    android:textColor="@color/color_666666"
                     android:textSize="13sp" />
 
 
@@ -224,9 +233,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/dp_4"
+                    android:layout_marginLeft="@dimen/dp6"
                     android:layout_toRightOf="@+id/detailsPraiseImg"
-                    android:text="0" />
+                    android:text="0"
+                    android:textColor="@color/color_666666"
+                    android:textSize="13sp" />
             </RelativeLayout>
         </LinearLayout>
 
