--- a/app/src/main/res/layout/activity_password_manager.xml
+++ b/app/src/main/res/layout/activity_password_manager.xml
@@ -16,10 +16,16 @@
         android:layout_height="@dimen/dp50"
         android:background="@color/color_ffffff"
         android:gravity="center_vertical"
-        app:leftTitleTxt="修改密码"
+        app:leftTitleTxt="设置密码"
         app:rightIcon="@mipmap/btn_item_back" />
 
-    <include layout="@layout/view_line_horientol" />
+    <View
+        android:id="@+id/settingPwdBottomLine"
+        android:layout_width="match_parent"
+        android:layout_height="0.75dp"
+        android:layout_marginLeft="@dimen/dp10"
+        android:layout_marginRight="@dimen/dp10"
+        android:background="#dadada" />
 
     <xkh.hzp.xkh.com.base.view.ItemLayout
         android:id="@+id/modifyPwdItemLayout"
@@ -30,7 +36,13 @@
         app:leftTitleTxt="修改密码"
         app:rightIcon="@mipmap/btn_item_back" />
 
-    <include layout="@layout/view_line_horientol" />
+    <View
+        android:id="@+id/modifyPwdBottomLine"
+        android:layout_width="match_parent"
+        android:layout_height="0.75dp"
+        android:layout_marginLeft="@dimen/dp10"
+        android:layout_marginRight="@dimen/dp10"
+        android:background="#dadada" />
 
     <xkh.hzp.xkh.com.base.view.ItemLayout
         android:id="@+id/findPwdItemLayout"
@@ -41,6 +53,12 @@
         app:leftTitleTxt="找回密码"
         app:rightIcon="@mipmap/btn_item_back" />
 
-    <include layout="@layout/view_line_horientol" />
+    <View
+        android:id="@+id/findPwdBottomLine"
+        android:layout_width="match_parent"
+        android:layout_height="0.75dp"
+        android:layout_marginLeft="@dimen/dp10"
+        android:layout_marginRight="@dimen/dp10"
+        android:background="#dadada" />
 
 </LinearLayout>
