--- a/app/src/main/res/layout/activity_publish_video.xml
+++ b/app/src/main/res/layout/activity_publish_video.xml
@@ -64,9 +64,11 @@
             android:background="@null"
             android:gravity="left|top"
             android:hint="说点什么吧（150个字）"
+            android:lineSpacingExtra="@dimen/dp4"
             android:padding="@dimen/dp10"
-            android:textColorHint="@color/color_888888"
-            android:textSize="@dimen/sp_14" />
+            android:textColor="@color/color_333333"
+            android:textColorHint="@color/color_999999"
+            android:textSize="@dimen/sp_16" />
 
     </LinearLayout>
 
