--- a/app/src/main/res/layout/view_item_video_dynamic.xml
+++ b/app/src/main/res/layout/view_item_video_dynamic.xml
@@ -12,8 +12,7 @@
             android:id="@+id/dynamicUserHeadImg"
             android:layout_width="@dimen/dp40"
             android:layout_height="@dimen/dp40"
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/ic_launcher_round" />
+            android:layout_alignParentLeft="true" />
 
         <TextView
             android:id="@+id/dynamicUserNickNameTxt"
@@ -22,7 +21,8 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/dp15"
             android:layout_toRightOf="@id/dynamicUserHeadImg"
-            android:text="爱吃糖的羊" />
+            android:textColor="@color/color_666666"
+            android:textSize="@dimen/sp_14" />
 
 
         <TextView
@@ -35,8 +35,8 @@
             android:paddingLeft="@dimen/dp15"
             android:paddingRight="@dimen/dp15"
             android:paddingTop="@dimen/dp4"
-            android:text="3分钟前"
-            android:textColor="@color/color_666666" />
+            android:textColor="@color/color_999999"
+            android:textSize="@dimen/sp_12" />
 
     </RelativeLayout>
 
@@ -47,7 +47,7 @@
         android:layout_marginLeft="@dimen/dp15"
         android:layout_marginRight="@dimen/dp15"
         android:ellipsize="end"
-        android:lineSpacingExtra="@dimen/dp4"
+        android:lineSpacingExtra="@dimen/dp6"
         android:lines="3"
         android:textColor="@color/color_333333"
         android:textSize="@dimen/sp_16" />
@@ -67,8 +67,8 @@
 
         <ImageView
             android:id="@+id/videoPlayIconImg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/dp50"
+            android:layout_height="@dimen/dp50"
             android:layout_centerInParent="true"
             android:src="@mipmap/ic_media_play" />
 
@@ -103,7 +103,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dp4"
-                android:text="分享" />
+                android:text="分享"
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/sp_12" />
 
         </LinearLayout>
 
@@ -126,7 +128,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dp4"
-                android:text="评论" />
+                android:text="评论"
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/sp_12" />
 
         </LinearLayout>
 
@@ -149,7 +153,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dp4"
-                android:text="点赞" />
+                android:text="点赞"
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/sp_12" />
 
         </LinearLayout>
 
