--- a/common-library/src/main/res/layout/acitivyt_base.xml
+++ b/common-library/src/main/res/layout/acitivyt_base.xml
@@ -9,10 +9,15 @@
 
     <include layout="@layout/view_base_tool_bar" />
 
+    <View
+        android:id="@+id/toolBarBottomLine"
+        android:layout_width="match_parent"
+        android:layout_height="0.75dp"
+        android:background="#dadada" />
+
     <FrameLayout
         android:id="@+id/baseContentLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
 
 </LinearLayout>
