--- a/app/src/main/res/layout/activity_business_cooperation.xml
+++ b/app/src/main/res/layout/activity_business_cooperation.xml
@@ -15,7 +15,9 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:gravity="right"
-            android:text="公司名称：" />
+            android:text="公司名称："
+            android:textColor="@color/color_666666"
+            android:textSize="@dimen/sp_16" />
 
 
         <EditText
@@ -40,7 +42,9 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:gravity="right"
-            android:text="联系人姓名：" />
+            android:text="联系人姓名："
+            android:textColor="@color/color_666666"
+            android:textSize="@dimen/sp_16" />
 
 
         <EditText
@@ -64,7 +68,9 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:gravity="right"
-            android:text="联系人电话：" />
+            android:text="联系人电话："
+            android:textColor="@color/color_666666"
+            android:textSize="@dimen/sp_16" />
 
 
         <EditText
@@ -88,7 +94,9 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:gravity="right"
-            android:text="推广需求：" />
+            android:text="推广需求："
+            android:textColor="@color/color_666666"
+            android:textSize="@dimen/sp_16" />
 
 
         <EditText
@@ -106,7 +114,7 @@
     <Button
         android:id="@+id/businessConperationSubmitBtn"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp40"
+        android:layout_height="@dimen/dp45"
         android:layout_margin="@dimen/dp15"
         android:background="@color/color_ff5555"
         android:text="提交"
