--- a/app/src/main/res/layout/activity_join_talent.xml
+++ b/app/src/main/res/layout/activity_join_talent.xml
@@ -22,7 +22,9 @@
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:gravity="right"
-                android:text="联系姓名：" />
+                android:text="联系姓名："
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/sp_16" />
 
 
             <EditText
@@ -47,7 +49,9 @@
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:gravity="right"
-                android:text="联系电话：" />
+                android:text="联系电话："
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/sp_16" />
 
 
             <EditText
@@ -73,7 +77,9 @@
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:gravity="right"
-                android:text="微博昵称：" />
+                android:text="微博昵称："
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/sp_16" />
 
 
             <EditText
@@ -99,7 +105,9 @@
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:gravity="right"
-                android:text="身高：" />
+                android:text="身高："
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/sp_16" />
 
 
             <EditText
@@ -125,7 +133,9 @@
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:gravity="right"
-                android:text="体重：" />
+                android:text="体重："
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/sp_16" />
 
 
             <EditText
@@ -153,7 +163,7 @@
         <Button
             android:id="@+id/joinUsSubmitBtn"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp40"
+            android:layout_height="@dimen/dp45"
             android:layout_margin="@dimen/dp15"
             android:background="@color/color_ff5555"
             android:text="提交"
