--- a/app/src/main/res/layout/activity_user_nick_name.xml
+++ b/app/src/main/res/layout/activity_user_nick_name.xml
@@ -16,11 +16,11 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginLeft="@dimen/dp_10"
+            android:layout_marginRight="@dimen/dp10"
             android:background="@null"
             android:hint="取个名字"
             android:imeOptions="actionNext"
             android:maxLength="10"
-            android:paddingRight="50dp"
             android:singleLine="true"
             android:textSize="14sp" />
 
