--- a/app/src/main/res/layout/activity_video_dynamic_details.xml
+++ b/app/src/main/res/layout/activity_video_dynamic_details.xml
@@ -42,7 +42,9 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/dp15"
                     android:layout_toRightOf="@id/userHeadImg"
-                    android:text="爱吃糖的羊" />
+                    android:text="爱吃糖的羊"
+                    android:textColor="@color/color_666666"
+                    android:textSize="@dimen/sp_14" />
 
 
                 <TextView
@@ -67,9 +69,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dp15"
                 android:layout_marginRight="@dimen/dp15"
-                android:text="习近平强调，人类对自然规律的认知没有止境，防灾减灾、抗灾救灾是人类生存发展的永恒课题。科学认识致灾规律，有效减轻灾害风险，实现人与自然和谐共处，需要国际社会共同努力。中国将坚持以人民为中心的发展理念，坚持以防为主、防灾抗灾救灾相结合，全面提升综合防灾能力，为人民生命财产安全提供坚实保障。希望各位代表围绕本次研讨会“与地震风险共处”的主题，踊跃参与，集思广益，为促进减灾国际合作、降低自然灾害风险、构建人类命运共同体作出积极贡献。"
+                android:lineSpacingExtra="@dimen/dp6"
                 android:textColor="@color/color_333333"
-                android:textSize="@dimen/dp15" />
+                android:textSize="@dimen/sp_16" />
 
 
             <TextView
@@ -78,7 +80,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:layout_margin="@dimen/dp15"
-                android:text="2017-04-24" />
+                android:text="2017-04-24"
+                android:textColor="@color/color_999999"
+                android:textSize="@dimen/sp_12" />
 
             <View
                 android:layout_width="match_parent"
@@ -105,10 +109,12 @@
                     android:layout_height="@dimen/dp25"
                     android:layout_marginLeft="@dimen/dp20"
                     android:layout_weight="1"
-                    android:background="@color/color_f1f1f1"
+                    android:background="@color/color_f6f6f6"
                     android:gravity="center_vertical"
                     android:paddingLeft="@dimen/dp10"
-                    android:text="评论" />
+                    android:text="评论"
+                    android:textColor="@color/color_666666"
+                    android:textSize="@dimen/sp_14" />
             </LinearLayout>
 
 
@@ -134,14 +140,13 @@
         android:orientation="vertical">
 
         <View
-            android:id="@+id/topView"
+            android:id="@+id/statusBarView"
             android:layout_width="match_parent"
-            android:layout_height="0dp" />
+            android:layout_height="@dimen/statusbar_view_height" />
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp48">
-
 
             <ImageView
                 android:id="@+id/leftBackImg"
@@ -201,9 +206,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/dp_4"
+                    android:layout_marginLeft="@dimen/dp6"
                     android:layout_toRightOf="@id/detailsSharedImg"
                     android:text="转发"
+                    android:textColor="@color/color_666666"
                     android:textSize="13sp" />
 
             </RelativeLayout>
@@ -232,9 +238,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/dp_4"
+                    android:layout_marginLeft="@dimen/dp6"
                     android:layout_toRightOf="@id/detailsCommentImg"
                     android:text="0"
+                    android:textColor="@color/color_666666"
                     android:textSize="13sp" />
 
 
@@ -264,12 +271,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/dp_4"
+                    android:layout_marginLeft="@dimen/dp6"
                     android:layout_toRightOf="@+id/detailsPraiseImg"
-                    android:text="0" />
+                    android:text="0"
+                    android:textColor="@color/color_666666" />
             </RelativeLayout>
         </LinearLayout>
-
     </LinearLayout>
-
 </RelativeLayout>
