--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -9,7 +9,7 @@
         android:id="@+id/statusBarView"
         android:layout_width="match_parent"
         android:layout_height="@dimen/statusbar_view_height"
-        android:background="@color/color_ffffff" />
+        android:background="@color/color_c8000000" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -18,10 +18,11 @@
 
         <ImageView
             android:id="@+id/userHeadImg"
-            android:layout_width="@dimen/dp50"
-            android:layout_height="@dimen/dp50"
+            android:layout_width="@dimen/dp75"
+            android:layout_height="@dimen/dp75"
             android:layout_centerInParent="true"
-            android:src="@drawable/ic_launcher_round" />
+            android:scaleType="fitXY"
+            android:src="@mipmap/icon_female_selected" />
 
         <TextView
             android:id="@+id/mineLoginTxt"
@@ -42,7 +43,6 @@
             android:layout_below="@id/userHeadImg"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/dp10"
-            android:text="爱吃糖的羊"
             android:textColor="@color/color_333333"
             android:textSize="@dimen/sp_14"
             android:textStyle="bold" />
@@ -53,8 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/userNickNameTxt"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/dp10"
-            android:text="找模特，找模特，找模特，找模特" />
+            android:layout_marginTop="@dimen/dp10" />
 
     </RelativeLayout>
 
