--- a/app/src/main/res/layout/fragment_talent_mine.xml
+++ b/app/src/main/res/layout/fragment_talent_mine.xml
@@ -10,7 +10,7 @@
         android:id="@+id/statusBarView"
         android:layout_width="match_parent"
         android:layout_height="@dimen/statusbar_view_height"
-        android:background="#70fb435b" />
+        android:background="@color/color_c8000000" />
 
     <RelativeLayout
         android:id="@+id/barLayout"
@@ -66,10 +66,9 @@
 
                 <ImageView
                     android:id="@+id/mineHeadImg"
-                    android:layout_width="@dimen/dp50"
-                    android:layout_height="@dimen/dp50"
-                    android:layout_centerInParent="true"
-                    android:src="@drawable/ic_launcher_round" />
+                    android:layout_width="@dimen/dp75"
+                    android:layout_height="@dimen/dp75"
+                    android:layout_centerInParent="true" />
 
                 <TextView
                     android:id="@+id/mineNickNameTxt"
@@ -78,7 +77,6 @@
                     android:layout_below="@id/mineHeadImg"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="@dimen/dp10"
-                    android:text="爱吃糖的羊"
                     android:textColor="@color/color_333333"
                     android:textSize="@dimen/sp_14"
                     android:textStyle="bold" />
@@ -102,8 +100,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/mineNickNameTxt"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="@dimen/dp10"
-                    android:text="找模特，找模特，找模特，找模特" />
+                    android:layout_marginTop="@dimen/dp10" />
 
             </RelativeLayout>
 
@@ -115,8 +112,9 @@
                 android:background="@color/color_ffffff"
                 app:tabIndicatorColor="@color/color_e80036"
                 app:tabIndicatorHeight="@dimen/dp2"
-                app:tabSelectedTextColor="@color/color_1f1f1f"
-                app:tabTextColor="@color/color_666666" />
+                app:tabSelectedTextColor="@color/color_333333"
+                app:tabTextAppearance="@style/TabLayoutTextSize"
+                app:tabTextColor="@color/color_999999" />
 
         </android.support.design.widget.AppBarLayout>
 
