--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="color_ff5555">#ff5555</color>
     <color name="color_ffffff">#ffffff</color>
     <color name="color_333333">#333333</color>
+    <color name="color_999999">#999999</color>
     <color name="color_888888">#888888</color>
     <color name="color_dadada">#dadada</color>
     <color name="color_4b4b4b">#4B4B4B</color>
