--- a/common-library/src/main/res/layout/item_talent_header.xml
+++ b/common-library/src/main/res/layout/item_talent_header.xml
@@ -7,9 +7,8 @@
 
     <ImageView
         android:id="@+id/talentHeadItemImg"
-        android:layout_width="@dimen/dp50"
-        android:layout_height="@dimen/dp50"
-        android:src="@drawable/ic_launcher_round" />
+        android:layout_width="@dimen/dp60"
+        android:layout_height="@dimen/dp60" />
 
     <TextView
         android:id="@+id/talentTypeTxt"
@@ -17,6 +16,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/dp15"
-        android:text="学院风" />
+        android:text="学院风"
+        android:textColor="@color/color_333333"
+        android:textSize="15sp" />
 
 </LinearLayout>
