--- a/common-library/src/main/res/layout/view_item_layout.xml
+++ b/common-library/src/main/res/layout/view_item_layout.xml
@@ -10,8 +10,7 @@
         android:layout_height="@dimen/dp20"
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/dp_10"
-        android:scaleType="fitCenter"
-        android:src="@drawable/ic_launcher_round" />
+        android:scaleType="fitCenter" />
 
 
     <TextView
