--- a/common-library/src/main/res/values/colors.xml
+++ b/common-library/src/main/res/values/colors.xml
@@ -13,5 +13,7 @@
     <color name="color_e80036">#e80036</color>
     <color name="color_1f1f1f">#1f1f1f</color>
     <color name="color_f1f1f1">#f1f1f1</color>
+    <color name="color_f6f6f6">#f6f6f6</color>
     <color name="color_f9f9f9">#f9f9f9</color>
+    <color name="color_c8000000">#32000000</color>
 </resources>
