talent homepage ，share

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -23,15 +23,16 @@
 
             <ImageView
                 android:id="@+id/activity_search_btn_search"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
+                android:layout_width="@dimen/dp25"
+                android:layout_height="@dimen/dp25"
+                android:layout_centerVertical="true"
                 android:src="@mipmap/icon_btn_search" />
 
             <TextView
                 android:id="@+id/activity_search_btn_edit"
                 android:layout_width="match_parent"
                 android:layout_height="31dp"
+                android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/activity_search_btn_search"
                 android:background="@null"
                 android:gravity="center_vertical"
